
[tool.poetry]
name = "volosti-gui-kivy"
version = "0.1.dev0"
description = "Реализация графического интерфейса пользователя Волостей на графическом фреймворке Kivy"
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://pypi.org/project/volosti-gui-kivy"
repository = "https://github.com/volosti/volosti-gui-kivy"

keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = { version = "^37.0.4", optional = true }
kivy = "^2.1.0"
pycryptodome = { version = "^3.15.0", optional = true }
volosti-common = { version = "^0.1.dev0", allow-prereleases = true }

[tool.poetry.extras]
openssl = ["cryptography"]
pycryptodome = ["pycryptodome"]
all = [
    "cryptography",
    "pycryptodome",
]

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = ">=0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "wemake"
src_paths = ["volosti_gui_kivy", "tests"]

[tool.mypy]
files = ["volosti_gui_kivy", "tests"]
